--- a/static/lab1.css
+++ b/static/lab1.css
@@ -7,3 +7,30 @@ body {
     padding-left: 3px;
     width: 60%;
 }
+
+img {
+    width: 400px;
+    height: auto; 
+}
+.backmenu {
+    vertical-align: 30%;
+}
+header {
+    font-size: 30px;
+    opacity: 0.9;
+    border-radius: 20px;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    padding-top: 20px;
+}
+footer {
+    font-size: 25px;
+    opacity: 0.9;
+    border-radius: 10px;
+    width: 100%;
+    height: 60px;
+    text-align: left;
+    padding-top: 25px;
+    padding-left: 10px;
+}
