--- a/templates/example.html
+++ b/templates/example.html
@@ -10,8 +10,12 @@
         WEB-программирование, часть 2. Лабораторная работа 2
     </header>
 
-    <main>
-        основной контент
+    <main class="math">
+        5 + 2 = {{5 + 2}}<br>
+        11 * 28 = {{11*28}}<br>
+        3258 - 759 = {{3258-759}}<br>
+        8452 / 793 = {{8452 / 793}}<br>
+        45<sup>8</sup> = {{48 ** 8}}
     </main>
 
     <footer>
