--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     </header>
     
     <main>
+        <div>
+            <a href="http://127.0.0.1:5000/lab2"></a>
+            <a href="http://127.0.0.1:5000/lab2" class='backmenu'>Меню</a>
+        </div>
         {% block main %}{% endblock %}
     </main>
     <footer>
