--- a/templates/example.html
+++ b/templates/example.html
@@ -17,6 +17,11 @@
         WEB-программирование, часть 2. {% if numberLab %}Лабораторная работа {{numberLab}}{% endif %}
     </header>
 
+    <div>
+        <a href="http://127.0.0.1:5000/menu"></a>
+        <a href="http://127.0.0.1:5000/lab2" class='backmenu'>Меню</a>
+    </div>
+
     <main class="math">
         5 + 2 = {{5 + 2}}<br>
         11 * 28 = {{11*28}}<br>
