--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,5 +9,27 @@
         <li>
             <a href="/lab2/example">example</a>
         </li>
+        <li>
+            <a href="/lab2/filters">filters</a>
+        </li>
+        <li>
+            <a href="/lab2/all_flowers">all_flowers</a>
+        </li>
+        <li>
+            <a href="/lab2/flower">flowers_id</a>
+        </li>
+        <li>
+            <a href="/lab2/calc">calc</a>
+        </li>
+        <li>
+            <a href="/lab2/books">books</a>
+        </li>
+        <li>
+            <a href="/lab2/cars">cars</a>
+        </li>
     </ol>
+
+    <div>
+        <a href="http://127.0.0.1:5000/menu" class='backmenu'>Меню</a>
+    </div>
 {% endblock %}
