--- a/templates/example.html
+++ b/templates/example.html
@@ -11,6 +11,7 @@
         {% endif %} 
         Лабораторная работа {{numberLab}}</title>
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <header>
