--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -4,14 +4,20 @@
 {#основной контент: #}
 {% block main %}
     <h1>Формы, cookie</h1>
+    <div>
+        Привет, <span style='color: {{name_color}}'>{{name}}</span>!
+    </div>
     <div>Список сделанных страниц:</div>
     <ol>
         <li>
             <a href="/lab3/cookie">Куки</a>
+        </li>
+        <li>
+            <a href="/lab3/del_cookie">Очистка кук</a>
         </li>
     </ol>
     <div>
         <a href="http://127.0.0.1:5000/menu"></a>
         <a href="http://127.0.0.1:5000/menu" class='backmenu'>Вернуться в главное меню</a>
     </div>
-{% endblock %}
+    {% endblock %}
