--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -15,6 +15,9 @@
         <li>
             <a href="/lab3/del_cookie">Очистка кук</a>
         </li>
+        <li>
+            <a href="/lab3/form1">Форма</a>
+        </li>
     </ol>
     <div>
         <a href="http://127.0.0.1:5000/menu"></a>
