--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,20 @@
     <title>Бархатова Ольга. {% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon.ico') }}">
+    <style>
+        body{
+            {% if request.cookies.get('color') %}
+                color: {{request.cookies.get('color') }};
+            {% endif %}
+            {% if request.cookies.get('bg_color') %}
+                background-color: {{ request.cookies.get('bg_color') }};
+            {% endif %}
+
+            {% if request.cookies.get('font_size') %}
+                font-size: {{ request.cookies.get('font_size') }}px;
+            {% endif %}
+        }
+    </style>
 </head>
 <body>
     <header>
