--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -39,6 +39,9 @@
         <li>
             <a href="/lab3/settings">Настройки цвета</a>
         </li>
+        <li>
+            <a href="/lab3/train_ticket"> Железнодорожный билет</a>
+        </li>
     </ol>
     <div>
         <a href="http://127.0.0.1:5000/menu"></a>
