Покупка билетов на игры КХЛ

--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -42,6 +42,9 @@
         <li>
             <a href="/lab3/train_ticket"> Железнодорожный билет</a>
         </li>
+        <li>
+            <a href="/lab3/search">Покупка билетов на игры КХЛ</a>
+        </li>
     </ol>
     <div>
         <a href="http://127.0.0.1:5000/menu"></a>
