--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -1,8 +1,15 @@
-{% extends "base.html" %}
-{% block lab %}Лабораторная работа 4{% endblock %}
-{% block main %}
+{% extends 'base.html' %}
+
+{# номер лабораторной работы: #}
+{% block lab %} Лабораторная работа 4 {% endblock %}
+
+{# основной контент: #}
+{% block main %} 
     <h1>Формы (POST)</h1>
-    <div>Тема лабораторной работы - Формы (POST). Список сделанных страниц:</div>
+    <div>
+        Тема лабораторной работы - Формы (POST). Список сделанных страниц:
+    </div>
     <ol>
-        <li><a href="">***</a></li>
+        <li><a href="/lab4/div">Деление чисел</a></li>
     </ol>
+{% endblock %}
