--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -11,5 +11,9 @@
     </div>
     <ol>
         <li><a href="/lab4/div">Деление чисел</a></li>
+        <li><a href="/lab4/add">Суммирование</a></li>
+        <li><a href="/lab4/umnozh">Умножение</a></li>
+        <li><a href="/lab4/minus">Вычитание</a></li>
+        <li><a href="/lab4/stepen">Возведение в степень</a></li>
     </ol>
 {% endblock %}
