--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -15,5 +15,6 @@
         <li><a href="/lab4/umnozh">Умножение</a></li>
         <li><a href="/lab4/minus">Вычитание</a></li>
         <li><a href="/lab4/stepen">Возведение в степень</a></li>
+        <li><a href="/lab4/tree">Деревья</a></li>
     </ol>
 {% endblock %}
