--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -16,5 +16,6 @@
         <li><a href="/lab4/minus">Вычитание</a></li>
         <li><a href="/lab4/stepen">Возведение в степень</a></li>
         <li><a href="/lab4/tree">Деревья</a></li>
+        <li><a href="/lab4/login">Авторизация</a></li>
     </ol>
 {% endblock %}
