--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -2,26 +2,24 @@
 {% block lab %}Лабораторная работа 4{% endblock %}
 {% block main %}
     {% if authorized %}
-        <h1> Добро пожаловать, {{ login }}!</h1>
-        <div>
-            <form action="/lab4/logout" method="post">
-                <button>Выход</button>
-            </form>
-        </div>
+        <h1>Добро пожаловать, {{ name }}!</h1>
+        <form method="post" action="/lab4/logout">
+            <button type="submit">Выйти</button>
+        </form>
     {% else %}
-        <h1> Вход</h1>
-        <h2> Пожалуйста, авторизуйтесь </h2>
+        <h1>Вход</h1>
+        <h2>Пожалуйста, авторизуйтесь</h2>
         <form method="post"> 
             <div>
                 <label for="login">Пользователь: </label>
-                <input type="text" id="login" name="login">
+                <input type="text" id="login" name="login" value="{{ login }}">
             </div>
             <div>
                 <label for="password">Пароль: </label>
                 <input type="password" id="password" name="password">
             </div>
             {% if error %}
-                <div>{{ error }}</div>
+                <div style="color: rgb(99, 21, 21); font-weight: bolder;">{{ error }}</div>
             {% endif %}
             <div>
                 <button type="submit">Войти</button>
