--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -17,5 +17,6 @@
         <li><a href="/lab4/stepen">Возведение в степень</a></li>
         <li><a href="/lab4/tree">Деревья</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
+        <li><a href="/lab4/fridge">Холодильник</a></li>
     </ol>
 {% endblock %}
