--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -6,6 +6,9 @@
         <form method="post" action="/lab4/logout">
             <button type="submit">Выйти</button>
         </form>
+        <div>
+            <a href="/lab4/users">Перейти к списку пользователей</a>
+        </div>
     {% else %}
         <h1>Вход</h1>
         <h2>Пожалуйста, авторизуйтесь</h2>
