заготовка к 5-ой лабораторной

--- a/static/main.css
+++ b/static/main.css
@@ -56,3 +56,20 @@ button {
     color: black;
     padding: 10px 15px;
 }
+
+.block {
+    display: inline-block;
+    padding:  15px;
+    margin: 5px;
+    background-color: #090253;
+    border-radius: 5px;
+    text-align: center;
+}
+a.block {
+    color: white;
+}
+.block-container{
+    background-color: #0da8cf;
+    padding: 30px;
+    text-align: center;
+}
