--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -13,6 +13,8 @@
     <a href="{{ url_for('lab5.create') }}" class="block">Создать статью</a>
 </div>
 
-<p style="text-align: right; margin:30px;">anonymous</p>
+<p style="text-align: right; margin:30px;">
+    {{ login if login else 'Anonymou' }}
+</p>
 
 {% endblock %}
