--- a/templates/lab5/create_article.html
+++ b/templates/lab5/create_article.html
@@ -6,6 +6,11 @@
 {# основной контент #}
 {% block main %}
     <h1> Создание статьи</h1>
+    {% if error %}
+        <div style="color: red;">
+            {{ error }}
+        </div>
+    {% endif %}
 
     <form method="post">
         <div>
