--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -12,6 +12,7 @@
     <a href="{{ url_for('lab5.list') }}" class="block">Список статей</a>
     <a href="{{ url_for('lab5.create') }}" class="block">Создать статью</a>
     <a href="{{ url_for('lab5.logout') }}" class="block">Выйти</a> 
+    <a href="{{ url_for('lab5.users') }}" class="block">Пользователи</a> 
 </div>
 
 <p style="text-align: right; margin:30px;">
