--- a/templates/lab7/lab7.html
+++ b/templates/lab7/lab7.html
@@ -40,6 +40,9 @@
     .modal button:hover {
         background-color: #000152;
     }
+    .error-message {
+        color: red
+    }
 </style>
 {%endblock%}
 
@@ -80,6 +83,7 @@
     <label>
         Описание:
         <textarea id="description"></textarea>
+        <div id="description-error" class = "error-message"></div>
     </label> <br>
     <button onclick="sendFilm()"> ОК </button>
     <button onclick="cancel()">Отмена</button>
