--- a/templates/lab7/lab7.html
+++ b/templates/lab7/lab7.html
@@ -6,6 +6,27 @@
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}"></script>
 <style>
+    th, td { 
+        border: 1px solid #1f0646;
+        padding: 8px; 
+        text-align: center; 
+    }
+    th { 
+        background-color: #97b2ee; 
+    } 
+    button { 
+        padding: 10px 20px; 
+        background-color: #480686; 
+        color: white; 
+        border: none; 
+        border-radius: 4px;
+        cursor: pointer; 
+        margin-left: 10px;
+    }
+   
+    button:hover { 
+        background-color:  #f67e05; 
+    }
     .modal {
         display: none;
         z-index: 100;
