--- a/templates/lab8/lab8.html
+++ b/templates/lab8/lab8.html
@@ -9,6 +9,8 @@
 <div class="block-container">
     
     <a href="{{ url_for('lab8.register') }}" class="block">Регистрация</a>
+    <a href="{{ url_for('lab8.login') }}" class="block">Вход</a>
+    <a href="{{ url_for('lab8.article_list') }}" class="block">Статьи</a>
    
 </div>
 
