--- a/templates/lab8/lab8.html
+++ b/templates/lab8/lab8.html
@@ -11,6 +11,7 @@
     <a href="{{ url_for('lab8.register') }}" class="block">Регистрация</a>
     <a href="{{ url_for('lab8.login') }}" class="block">Вход</a>
     <a href="{{ url_for('lab8.article_list') }}" class="block">Статьи</a>
+    <a href="{{ url_for('lab8.create') }}" class="block">Создать статью</a>
    
 </div>
 
